[tool.poetry]
name = "gluco-waise"
version = "0.1.0"
description = "A chatbot that answers nutrition-related questions for people with diabetes using a provided FAQ dataset. The focus is on project structure, data handling, and thoughtful trade-offs rather than perfect accuracy."
authors = ["Francesco Gentile <fra.fran.francesco@gmail.com>"]
readme = "README.md"
packages = [{ include = "gluco_waise" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
langchain = "*"
langgraph = "*"
openai = "*"
faiss-cpu = "*"
python-dotenv = "*"
numpy = "*"
langchain-openai = "^0.3.28"
python-docx = "^1.2.0"
docx = "^0.2.4"  # you might not need both `docx` and `python-docx`
chainlit = "^2.6.3"
langchain-community = "^0.3.27"
pypdf = "^5.9.0"

[tool.poetry.scripts]
run-agent = "gluco_waise.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
